# advent-of-code-2019

rust/: Cargo.toml  build.sh  cmdline.sh
rust/src/: day01.rs  day02.rs  day03.rs  day04.rs
rust/template/: day.rs
